refactoring: controllers, DTOs and mappers